(c) (home) two fields where we can search for addresses

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCqCWrA7T0SIWA3tdbvjkmlOXWAdkQelMA&libraries=places"></script>
   </body>
 </html>
