add manifest.json for pwa

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400" rel="stylesheet">
     <link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/static/favicon.ico" type="image/x-icon">
+    <link rel="manifest" href="/static/manifest.json">
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
