--- a/index.html
+++ b/index.html
@@ -24,4 +24,11 @@
     <!-- End Google Tag Manager (noscript) -->
     <div id="app"></div>
   </body>
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script>
+    (adsbygoogle = window.adsbygoogle || []).push({
+      google_ad_client: "ca-pub-9768284681264135",
+      enable_page_level_ads: true
+    });
+  </script>
 </html>
